<resources>
    <string name="app_name">Spotify Streamer</string>
    <string name="action_settings">Settings</string>

    <string name="main_activity_title">My App Portfolio</string>
    <string name="main_activity_label">My Nanodegree Apps!</string>

    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

</resources>
