<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.astuter.spotifystreamer.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/main_activity_label"
        android:textSize="22sp" />


    <Button
        android:id="@+id/btn_spotify_streamer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_bottom_margin"
        android:layout_marginLeft="@dimen/btn_left_margin"
        android:layout_marginRight="@dimen/btn_right_margin"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:background="@color/btn_orange"
        android:onClick="onClick"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/btn_scores_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_bottom_margin"
        android:layout_marginLeft="@dimen/btn_left_margin"
        android:layout_marginRight="@dimen/btn_right_margin"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:background="@color/btn_orange"
        android:onClick="onClick"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/btn_library_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_bottom_margin"
        android:layout_marginLeft="@dimen/btn_left_margin"
        android:layout_marginRight="@dimen/btn_right_margin"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:background="@color/btn_orange"
        android:onClick="onClick"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_bottom_margin"
        android:layout_marginLeft="@dimen/btn_left_margin"
        android:layout_marginRight="@dimen/btn_right_margin"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:background="@color/btn_orange"
        android:onClick="onClick"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/btn_xyz_reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_bottom_margin"
        android:layout_marginLeft="@dimen/btn_left_margin"
        android:layout_marginRight="@dimen/btn_right_margin"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:background="@color/btn_orange"
        android:onClick="onClick"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/btn_bottom_margin"
        android:layout_marginLeft="@dimen/btn_left_margin"
        android:layout_marginRight="@dimen/btn_right_margin"
        android:layout_marginTop="@dimen/btn_top_margin"
        android:background="@color/btn_red"
        android:onClick="onClick"
        android:text="@string/capstone"
        android:textColor="@color/white" />
</LinearLayout>
